--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Shubham Mali's personal website featuring his portfolio, blog and contact information.">
   <meta name="keywords" content="Shubham Mali, portfolio, personal website, blog, contact">
   <meta name="robots" content="index, follow">
-    <link rel="icon" href="images/shubham2.jpg">
+    <link rel="icon" href="images/asd.jpeg">
 
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -73,8 +73,8 @@
     <div class="main">
         <div class="one flex-v" id="home">
             <div class="static-txt">
-                <h1>Hi there🖐️, </h1>
-                <h2>my name is shubham mali</h2>
+                <h1>Hi there🖐️ <img src="" alt="">, </h1>
+                <h2>my name is shubham mali ...</h2>
             </div>
             <div class="dynamic">
                 <h1>
@@ -353,7 +353,7 @@
                     });
                 }
                 function showAlert(){
-                    alert("Please open this site in your laptop/PC for better user experience :)");
+                    alert("Mobile View Under Development!! Please open this site in your laptop/PC for better user experience :)");
                 }
             </script>
 
